--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="slider" style="--quantity: 10">
             <div class="item" style="--position: 1"> <img src="/assets/images/Akali.jpg" alt="Akali"></div>
             <div class="item" style="--position: 2"> <img src="/assets/images/Yone.jpg" alt="Yone"></div>
-            <div class="item" style="--position: 3"> <img src="/assets/images/Yasuo.jpg" alt="Yasuo"></div>
+            <div class="item" style="--position: 3"> <img src="/assets/images/Senna.jpg" alt="Yasuo"></div>
             <div class="item" style="--position: 4"> <img src="/assets/images/Irelia.jpg" alt="Irelia"></div>
-            <div class="item" style="--position: 5"> <img src="/assets/images/Leona.jpg" alt="Leona"></div>
+            <div class="item" style="--position: 5"> <img src="/assets/images/Kindred.jpg" alt="Leona"></div>
             <div class="item" style="--position: 6"> <img src="/assets/images/Mordekaiser.jpg" alt="Mordekaiser"></div>
             <div class="item" style="--position: 7"> <img src="/assets/images/Aphelios.jpg" alt="Aphelios"></div>
             <div class="item" style="--position: 8"> <img src="/assets/images/Lux.jpg" alt="Lux"></div>
-            <div class="item" style="--position: 9"> <img src="/assets/images/Camillie.jpg" alt="Camillie"></div>
-            <div class="item" style="--position: 10"> <img src="/assets/images/Gnar.jpg" alt="Gnar"></div>
+            <div class="item" style="--position: 9"> <img src="/assets/images/Ahri.jpg" alt="Camillie"></div>
+            <div class="item" style="--position: 10"> <img src="/assets/images/Ezreal.jpg" alt="Gnar"></div>
         </div>
     </div>
   </body>
