--- a/pages/Home.html
+++ b/pages/Home.html
@@ -9,7 +9,7 @@
   <body>
     <div class="banner">
         <div class="slider" style="--quantity: 10">
-            <div class="item" style="--position: 1"> <img src="/assets/images/Akali.jpg" alt="Akali"></div>
+            <div class="item" style="--position: 1"> <a href="/pages/Akali.html"> <img src="/assets/images/Akali.jpg" alt="Akali"> </a></div>
             <div class="item" style="--position: 2"> <img src="/assets/images/Yone.jpg" alt="Yone"></div>
             <div class="item" style="--position: 3"> <img src="/assets/images/Senna.jpg" alt="Yasuo"></div>
             <div class="item" style="--position: 4"> <img src="/assets/images/Irelia.jpg" alt="Irelia"></div>
