--- a/home.html
+++ b/home.html
@@ -9,16 +9,16 @@
   <body>
     <div class="banner">
         <div class="slider" style="--quantity: 10">
-            <div class="item" style="--position: 1"> <a href="/pages/Akali.html"><img src="/assets/images/Akali.jpg" alt=""></a></div>
-            <div class="item" style="--position: 2"> <a href="/pages/yone.html"><img src="/assets/images/Yone.jpg" alt=""></div></a>
-            <div class="item" style="--position: 3"> <a href="/pages/senna.html"><img src="/assets/images/Senna.jpg" alt=""></div></a>
-            <div class="item" style="--position: 4"> <a href="/pages/irelia.html"><img src="/assets/images/Irelia.jpg" alt=""></div></a>
-            <div class="item" style="--position: 5"> <a href="/pages/kindred.html"><img src="/assets/images/Kindred.jpg" alt=""></div></a>
-            <div class="item" style="--position: 6"> <a href="/pages/mordekaiser.html"><img src="/assets/images/Mordekaiser.jpg" alt=""></a></div>
-            <div class="item" style="--position: 7"> <a href="/pages/aphelios.html"><img src="/assets/images/Aphelios.jpg" alt=""></a></div>
-            <div class="item" style="--position: 8"> <a href="/pages/lux.html"><img src="/assets/images/Lux.jpg" alt=""></a></div>
-            <div class="item" style="--position: 9"> <a href="/pages/ahri.html"><img src="/assets/images/Ahri.jpg" alt=""></a></div>
-            <div class="item" style="--position: 10"> <a href="/pages/ezreal.html"><img src="/assets/images/Ezreal.jpg" alt=""></a></div>
+            <div class="item" style="--position: 1"> <span>Akali</span><a href="/pages/Akali.html"><img src="/assets/images/Akali.jpg" alt=""></a></div>
+            <div class="item" style="--position: 2"> <span>Yone</span><a href="/pages/yone.html"><img src="/assets/images/Yone.jpg" alt=""></div></a>
+            <div class="item" style="--position: 3"> <span>Senna</span><a href="/pages/senna.html"><img src="/assets/images/Senna.jpg" alt=""></div></a>
+            <div class="item" style="--position: 4"> <span>Irelia</span><a href="/pages/irelia.html"><img src="/assets/images/Irelia.jpg" alt=""></div></a>
+            <div class="item" style="--position: 5"> <span>Kindred</span><a href="/pages/kindred.html"><img src="/assets/images/Kindred.jpg" alt=""></div></a>
+            <div class="item" style="--position: 6"> <span>Mordekaiser</span><a href="/pages/mordekaiser.html"><img src="/assets/images/Mordekaiser.jpg" alt=""></a></div>
+            <div class="item" style="--position: 7"> <span>Aphelios</span><a href="/pages/aphelios.html"><img src="/assets/images/Aphelios.jpg" alt=""></a></div>
+            <div class="item" style="--position: 8"> <span>Lux</span><a href="/pages/lux.html"><img src="/assets/images/Lux.jpg" alt=""></a></div>
+            <div class="item" style="--position: 9"> <span>Ahri</span><a href="/pages/ahri.html"><img src="/assets/images/Ahri.jpg" alt=""></a></div>
+            <div class="item" style="--position: 10"> <span>Ezreal</span><a href="/pages/ezreal.html"><img src="/assets/images/Ezreal.jpg" alt=""></a></div>
         </div>
     </div>
   </body>
